Enhanced the CollectionsOps.isUnmodifiable implementations