@@ -3,7 +3,7 @@ package org.deus_ex_java.util;
 import org.jspecify.annotations.NullMarked;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -17,16 +17,26 @@ public final class CollectionsOps {
   }
 
   /**
-   * Returns {@code true} if the {@link Collection} throws an {@link UnsupportedOperationException} when calling
-   * {@link Collection#addAll} with an empty {@link List#of}, false otherwise.
+   * Returns {@code true} if the {@link Collection} is identified as unmodifiable via
+   * internal class type or behavioral probing.
+   * <p>
+   * Behavior probing check to see if an {@link UnsupportedOperationException} is thrown when calling
+   * {@link Collection#addAll} with an {@link Collections#emptyList}, false otherwise.
    *
    * @param collection instance being tested for being unmodifiable
    * @return {@code true} if the {@link Collection} throws an {@link UnsupportedOperationException} when calling
-   *     {@link Collection#addAll} with an empty {@link List#of}, false otherwise
+   * {@link Collection#addAll} with an {@link Collections#emptyList}, false otherwise
    */
   public static boolean isUnmodifiable(Collection<?> collection) {
+    // 1. Fast path: Check known JDK internal types (Java 17+)
+    var className = collection.getClass().getName();
+    if (className.contains("Unmodifiable") || className.contains("ImmutableCollections")) {
+      return true;
+    }
+
+    // 2. Slow path: Your existing behavioral probe
     try {
-      collection.addAll(List.of());
+      collection.addAll(Collections.emptyList());
 
       return false;
     } catch (UnsupportedOperationException UnsupportedOperationException) {
@@ -35,14 +45,23 @@ public final class CollectionsOps {
   }
 
   /**
-   * Returns {@code true} if the {@link Map} throws an {@link UnsupportedOperationException} when calling
-   * {@link Map#putAll} with an empty {@link Map#of}, false otherwise.
-   *
+   * Returns {@code true} if the {@link Map} is identified as unmodifiable via
+   * internal class type or behavioral probing.
+   * <p>
+   * Behavior probing check to see if an {@link UnsupportedOperationException} is thrown when calling
+   * {@link Map#putAll} with an {@link Collections#emptyList}, false otherwise.
    * @param map instance being tested for being unmodifiable
-   * @return {@code true} if the {@link Map} throws an {@link UnsupportedOperationException} when calling
-   *     {@link Map#putAll} with an empty {@link Map#of}, false otherwise
+   * @return {@code true} if the {@link Map} is identified as unmodifiable via
+   * internal class type or behavioral probing
    */
   public static boolean isUnmodifiable(Map<?, ?> map) {
+    // 1. Fast path: Check for known JDK immutable/unmodifiable types
+    var className = map.getClass().getName();
+    if (className.contains("ImmutableCollections") || className.contains("Unmodifiable")) {
+      return true;
+    }
+
+    // 2. Slow path: Behavioral probe for custom or unknown implementations
     try {
       map.putAll(Map.of());
 
@@ -51,5 +70,4 @@ public final class CollectionsOps {
       return true;
     }
   }
-
 }
